Home page with link to GitHub and 4 works

--- a/index.html
+++ b/index.html
@@ -3,15 +3,98 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible"
-        content="ie=edge">
-  <title>Document</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
+  <title>Examples of my work</title>
 </head>
 
 <body>
-  <h1>Under construction</h1>
+  <!-- <nav>
+    <ul class="container">
+      <li id="menu-btn-1" class="menu-btn-regular menu-btn-selected">Home</li>
+      <li id="menu-btn-2" class="menu-btn-regular">Works</li>
+      <li id="menu-btn-3" class="menu-btn-regular">Contact</li>
+    </ul>
+  </nav> -->
+
+  <main class="container nav-style">
+
+    <!-- home start ---------------------------->
+    <div id="home" class="home">
+
+      <div>
+        My name is Andrzej.<br>
+        I am a front-end developer and programmer.<br>
+        Here are links to my GitHub and some of my works.
+      </div>
+
+      <div>
+        my <a href="https://github.com/hydro17">GitHub</a>
+      </div>
+
+      <div class="my-works">
+
+        <div>
+          My GitHub contains the repositories (pinned) of the following works:
+        </div>
+
+        <div>
+          <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing</a>
+          <div class="text-description">Created in vanilla JavaScript / TypeScript (I prefer static typing)</div>
+        </div>
+
+        <div>
+          <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat</a>
+          <div class="text-description">Created with Angular and using Firebase as a realtime database
+          </div>
+        </div>
+
+        <div>
+          <a href="https://hydro17.github.io/css-only-clock/" target="_blank">CSS only clock</a>
+          <div class="text-description">A clock created using only HTML and CSS</div>
+        </div>
+
+        <div style="margin-top: 1em;">
+          <video wodth="400" height="300" src="movie_1min.mp4" controls></video>
+          <div class="text-description">Movie from the simulation in Unity 3D. <br>
+            I created AI (as scripts in C#) of sailing ships in this simulation.
+          </div>
+        </div>
+
+      </div>
+
+      <div>
+        my email: <a href="mailto:andrzej.a.peplowski@gmail.com">andrzej.a.peplowski@gmail.com</a>
+      </div>
+
+    </div>
+
+    <!-- home end ---------------------------->
+
+    <!-- works start ---------------------------->
+    <!-- <div id="works" class="works hide">
+
+      <figure>
+        <figcaption></figcaption>
+      </figure>
+
+    </div> -->
+    <!-- works end ---------------------------->
+
+    <!-- contact start ---------------------------->
+    <!-- <div id="contact" class="contact hide">
+    </div> -->
+    <!-- contact end ---------------------------->
+
+  </main>
+
+  <footer class="container">
+    &copy; Andrzej Pepłowski 2018
+  </footer>
+
+  <!-- <script src="script.js"></script> -->
 </body>
 
 </html>
