--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
         <div style="margin-top: 1em;">
           <video wodth="400" height="300" src="movie_1min.mp4" controls></video>
-          <div class="text-description">Movie from the simulation in Unity 3D. <br>
-            I created AI (as scripts in C#) of sailing ships in this simulation.
+          <div class="text-description">The movie from the simulation in Unity 3D. <br>
+            I have created in C# scripts controlling the sailing ships in this simulation.
           </div>
         </div>
 
