Updates and added Google Analytics global tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126273249-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-126273249-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,9 +35,20 @@
     <div id="home" class="home">
 
       <div>
-        My name is Andrzej.<br>
-        I am a front-end developer and programmer.<br>
-        Here are links to my GitHub and some of my works.
+        My name is Andrzej.
+        <br>I am a programmer/developer at the beginning of my path.
+        <br>
+        <br>My skills:
+        <br>Object oriented programming
+        <br>Java, JavaScript (ES6+) / TypeScript / Angular, HTML, CSS, SQL.
+        <br>Basic knowledge of Unity 3D (scripts written in C#).
+        <br>Basic knowlegde of UML and ERD.
+        <br>Knowledge of version control system GIT.
+        <br>Knowledge of SOLID and Clean Code.
+        <br>The ability to think analytically.
+        <br>No commercial experience
+        <br>
+        <br>Here are links to my GitHub and some of my works.
       </div>
 
       <div>
@@ -58,8 +79,9 @@
 
         <div style="margin-top: 1em;">
           <video wodth="400" height="300" src="movie_1min.mp4" controls></video>
-          <div class="text-description">The movie from the simulation in Unity 3D. <br>
-            I have created in C# scripts controlling the sailing ships in this simulation.
+          <div class="text-description">The movie from the simulation in Unity 3D. <br> I have created in C# scripts controlling
+            the sailing ships during this simulation. The blue ship moves randomly and the red one is trying to sink the
+            blue one (both ships shoot to each other with cannons).
           </div>
         </div>
 
