--- a/index.html
+++ b/index.html
@@ -36,17 +36,19 @@
 
       <div>
         My name is Andrzej.
-        <br>I am a programmer/developer at the beginning of my path.
+        <br>I am a programmer/developer.
         <br>
         <br>My skills:
-        <br>Object oriented programming
-        <br>Java, JavaScript (ES6+) / TypeScript / Angular, HTML, CSS, SQL.
+        <br>Object oriented programming.
+        <br>Java, C#, ASP.NET, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
+        <br>Basic knowledge of relational databases, ERD, SQL.
         <br>Basic knowledge of Unity 3D (scripts written in C#).
-        <br>Basic knowlegde of UML and ERD.
+        <br>Basic knowlegde of UML.
         <br>Knowledge of version control system GIT.
-        <br>Knowledge of SOLID and Clean Code.
+        <br>Knowledge of SOLID, Clean Code, REST.
         <br>The ability to think analytically.
-        <br>No commercial experience
+        <br>
+        <br>No commercial experience.
         <br>
         <br>Here are links to my GitHub and some of my works.
       </div>
