bug fixed: width in video tag

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
         <figure style="margin-top: 1.4em">
           <p>The movie from the simulation in Unity 3D</p>
-          <video wodth="400" height="300" src="movie_1min.mp4" controls></video>
+          <video width="500" src="movie_1min.mp4" controls></video>
           <figcaption>
             <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
             red one is trying to sink the blue one (both ships shoot to each other with cannons).
