--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
     <!-- home start ---------------------------->
     <div id="home" class="home">
 
-      <div>
+      <div class="my-header3">
         My name is Andrzej.
         <br>I am a programmer/developer.
+      </div>
 
+      <div>
         <p style="margin-bottom: .5em">My skills:</p>
 
         Object oriented programming.
@@ -58,7 +60,8 @@
     <!-- works start ---------------------------->
     <div id="works" class="works hide">
 
-      <h3>Here are links to my <a href="https://github.com/hydro17">GitHub</a> and some of my works.</h3>
+      <div class="my-header3" style="margin-top: 15px">Here are links to my <a href="https://github.com/hydro17">GitHub</a>
+        and some of my works.</div>
 
       <hr class="separator-line">
 
@@ -101,7 +104,7 @@
     <!-- works end ---------------------------->
 
     <!-- contact start ---------------------------->
-    <div id="contact" class="contact hide">
+    <div id="contact" class="contact my-header3 hide">
       My email: <a href="mailto:andrzej.a.peplowski@gmail.com">andrzej.a.peplowski@gmail.com</a>
     </div>
     <!-- contact end ---------------------------->
