Refactored to jQuery. Added soft transitions between pages.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         Object oriented programming.
         <br>Java, C#, ASP.NET, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
-        <br>Basic knowledge of relational databases, ERD, SQL.
+        <br>Knowledge of relational databases, ERD, SQL.
         <br>Basic knowledge of Unity 3D (scripts written in C#).
         <br>Basic knowlegde of UML.
         <br>Knowledge of version control system GIT.
@@ -115,6 +115,7 @@
     &copy; Andrzej Pepłowski 2018
   </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 
