--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p style="margin-bottom: .5em">My skills:</p>
 
         Object oriented programming.
-        <br>Java, C#, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
+        <br>Java, C#, .NET, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
         <br>Knowledge of relational databases, ERD, SQL.
         <br>Basic knowledge of Unity 3D (scripts written in C#).
         <br>Basic knowlegde of UML.
