--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
         Object oriented programming.
         <br>Java, C#, .NET, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
-        <br>Knowledge of relational databases, ERD, SQL.
+        <br>Academic knowledge of relational databases, ERD, SQL.
         <br>Basic knowledge of Unity 3D (scripts written in C#).
-        <br>Basic knowlegde of UML.
+        <br>Academic knowlegde of UML.
         <br>Knowledge of version control system GIT.
         <br>Knowledge of SOLID, Clean Code, REST.
         <br>The ability to think analytically.
