--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
         <br>Knowledge of version control system GIT.
         <br>Knowledge of SOLID, Clean Code, REST.
         <br>The ability to think analytically.
-
-        <p>No commercial experience.</p>
       </div>
 
     </div>
@@ -94,7 +92,8 @@
           <p>The movie from the simulation in Unity 3D</p>
           <video width="500" src="movie_1min.mp4" controls></video>
           <figcaption>
-            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
+            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and
+            the
             red one is trying to sink the blue one (both ships shoot to each other with cannons).
           </figcaption>
         </figure>
