Change the order of works

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <main class="container nav-style">
 
-    <!-- home start ---------------------------->
+    <!-- home start ------------------------------>
     <div id="home" class="home">
 
       <div class="my-header3">
@@ -53,7 +53,7 @@
       </div>
 
     </div>
-    <!-- home end ---------------------------->
+    <!-- home end ------------------------------->
 
     <!-- works start ---------------------------->
     <div id="works" class="works hide">
@@ -69,16 +69,25 @@
 
       <div class="my-works">
 
-        <figure>
-          <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing</a>
-          <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
+        <figure style="margin-top: 1.4em">
+          <p><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</p>
+          <video width="500" src="movie_1min.mp4" controls></video>
+          <figcaption>
+            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
+            red one is trying to sink the blue one (both ships shoot to each other with cannons).
+          </figcaption>
         </figure>
 
         <figure>
-          <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat</a>
+          <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (Angular)</a>
           <figcaption>
             Created with Angular and using Firebase as a realtime database
           </figcaption>
+        </figure>
+
+        <figure>
+          <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (JavaScript)</a>
+          <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
         </figure>
 
         <figure>
@@ -88,25 +97,15 @@
           </figcaption>
         </figure>
 
-        <figure style="margin-top: 1.4em">
-          <p>The movie from the simulation in Unity 3D</p>
-          <video width="500" src="movie_1min.mp4" controls></video>
-          <figcaption>
-            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and
-            the
-            red one is trying to sink the blue one (both ships shoot to each other with cannons).
-          </figcaption>
-        </figure>
-
       </div>
     </div>
-    <!-- works end ---------------------------->
+    <!-- works end ------------------------------->
 
-    <!-- contact start ---------------------------->
+    <!-- contact start --------------------------->
     <div id="contact" class="contact my-header3 hide">
       My email: <a href="mailto:andrzej.a.peplowski@gmail.com">andrzej.a.peplowski@gmail.com</a>
     </div>
-    <!-- contact end ---------------------------->
+    <!-- contact end ----------------------------->
 
   </main>
 
