Remove CSS only clock

--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
           <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
         </figure>
 
-        <figure>
+        <!-- <figure>
           <a href="https://hydro17.github.io/css-only-clock/" target="_blank">CSS only clock</a>
           <figcaption>
             A clock created using only HTML and CSS
           </figcaption>
-        </figure>
+        </figure> -->
 
       </div>
     </div>
