Add CSS only clock

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           <p><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</p>
           <video width="500" src="movie_1min.mp4" controls></video>
           <figcaption>
-            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
+            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and
+            the
             red one is trying to sink the blue one (both ships shoot to each other with cannons).
           </figcaption>
         </figure>
@@ -90,12 +91,12 @@
           <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
         </figure>
 
-        <!-- <figure>
+        <figure>
           <a href="https://hydro17.github.io/css-only-clock/" target="_blank">CSS only clock</a>
           <figcaption>
             A clock created using only HTML and CSS
           </figcaption>
-        </figure> -->
+        </figure>
 
       </div>
     </div>
