Add eBookcase as NETCore MVC and NETCore Razor Pages

--- a/index.html
+++ b/index.html
@@ -70,17 +70,32 @@
       <div class="my-works">
 
         <figure style="margin-top: 1.4em">
-          <p><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</p>
-          <video width="500" src="movie_1min.mp4" controls></video>
+          <a href="https://ebookcasecoremvc20181114102334.azurewebsites.net/" target="_blank">eBookcase / MVC <br>(C# / ASP.NET
+            Core MVC / Entity Framework / SQL Server / Azure)</a>
           <figcaption>
-            <br> I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and
-            the
-            red one is trying to sink the blue one (both ships shoot to each other with cannons).
+            Simple application (created using MVC) performing CRUD operations.
+          </figcaption>
+        </figure>
+
+        <figure style="margin-top: 1.4em">
+          <a href="https://ebookcase20181114111459.azurewebsites.net/BookList" target="_blank">eBookcase / Razor Pages <br>(C#
+            / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Azure)</a>
+          <figcaption>
+            The same application as above but created using Razor Pages.
           </figcaption>
         </figure>
 
         <figure>
-          <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (Angular)</a>
+          <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
+          <figcaption>
+            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
+            red one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
+          </figcaption>
+          <video width="500" src="movie_1min.mp4" controls></video>
+        </figure>
+
+        <figure>
+          <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (Angular / Firebase)</a>
           <figcaption>
             Created with Angular and using Firebase as a realtime database
           </figcaption>
