--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         <p style="margin-bottom: .5em">My skills:</p>
 
         Object oriented programming.
-        <br>Java, C#, .NET, JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
-        <br>Academic knowledge of relational databases, ERD, SQL.
+        <br>Java
+        <br>C# / .NET / MVC / Razor Pages / Entity Framework
+        <br>JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
+        <br>Knowledge of relational databases, ERD, SQL.
         <br>Basic knowledge of Unity 3D (scripts written in C#).
         <br>Academic knowlegde of UML.
         <br>Knowledge of version control system GIT.
