--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
       <div class="my-works">
 
         <figure style="margin-top: 1.4em">
-          <a href="https://ebookcasecoremvc20181114102334.azurewebsites.net/" target="_blank">eBookcase / MVC <br>(C# / ASP.NET
-            Core MVC / Entity Framework / SQL Server / Azure)</a>
+          <a href="https://ebookcasecoremvc20181114102334.azurewebsites.net/" target="_blank">eBookcase / MVC</a>
           <figcaption>
-            Simple application (created using MVC) performing CRUD operations.
+            (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Azure / Bootstrap 4)
+            <br>Simple application (created using MVC) performing CRUD operations.
           </figcaption>
         </figure>
 
         <figure style="margin-top: 1.4em">
-          <a href="https://ebookcase20181114111459.azurewebsites.net/BookList" target="_blank">eBookcase / Razor Pages <br>(C#
-            / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Azure)</a>
+          <a href="https://ebookcase20181114111459.azurewebsites.net/BookList" target="_blank">eBookcase / Razor Pages</a>
           <figcaption>
-            The same application as above but created using Razor Pages.
+            (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Azure / Bootstrap 4)
+            <br>Simple application (the same as above) (created using Razor Pages) performing CRUD operations.
           </figcaption>
         </figure>
 
         <figure>
           <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
           <figcaption>
-            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the
-            red one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
+            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red one is trying
+            to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
           <video width="500" src="movie_1min.mp4" controls></video>
         </figure>
