--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       <div class="my-works">
 
-        <figure style="margin-top: 1.4em">
+        <!-- <figure style="margin-top: 1.4em">
           <a href="https://ebookcasecoremvc20181114102334.azurewebsites.net/" target="_blank">eBookcase / MVC</a>
           <figcaption>
             (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Azure / Bootstrap 4)
@@ -85,7 +85,7 @@
             (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Azure / Bootstrap 4)
             <br>Simple application (the same as above) (created using Razor Pages) performing CRUD operations.
           </figcaption>
-        </figure>
+        </figure> -->
 
         <figure>
           <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
