--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
 
       <div class="my-works">
 
-        <!-- <figure style="margin-top: 1.4em">
-          <a href="https://ebookcasecoremvc20181114102334.azurewebsites.net/" target="_blank">eBookcase / MVC</a>
+        <figure style="margin-top: 1.4em">
+          <a href="http://ebookcase-core-mvc.gear.host/" target="_blank">eBookcase / MVC</a>
           <figcaption>
-            (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Azure / Bootstrap 4)
+            (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Bootstrap 4)
             <br>Simple application (created using MVC) performing CRUD operations.
           </figcaption>
         </figure>
 
         <figure style="margin-top: 1.4em">
-          <a href="https://ebookcase20181114111459.azurewebsites.net/BookList" target="_blank">eBookcase / Razor Pages</a>
+          <a href="http://ebookcase-core-rp.gear.host/BookList" target="_blank">eBookcase / Razor Pages</a>
           <figcaption>
-            (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Azure / Bootstrap 4)
+            (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Bootstrap 4)
             <br>Simple application (the same as above) (created using Razor Pages) performing CRUD operations.
           </figcaption>
-        </figure> -->
+        </figure>
 
         <figure>
           <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
