--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p style="margin-bottom: .5em">My skills:</p>
 
         Object oriented programming.
-        <br>Java
+        <br>Java / Spring / Hibernate
         <br>C# / .NET / MVC / Razor Pages / Entity Framework
         <br>JavaScript (ES6+) / TypeScript / Angular / jQuery, HTML, CSS.
         <br>Knowledge of relational databases, ERD, SQL.
@@ -60,7 +60,8 @@
     <!-- works start ---------------------------->
     <div id="works" class="works hide">
 
-      <div class="my-header3" style="margin-top: 15px">Here are links to my <a href="https://github.com/hydro17">GitHub</a>
+      <div class="my-header3" style="margin-top: 15px">Here are links to my <a
+          href="https://github.com/hydro17">GitHub</a>
         and some of my works.</div>
 
       <hr class="separator-line">
@@ -70,6 +71,13 @@
       </div>
 
       <div class="my-works">
+
+        <figure>
+          <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie" (SPA)</a>
+          <figcaption>
+            Responsive / mobile first website developed with Angular
+          </figcaption>
+        </figure>
 
         <figure style="margin-top: 1.4em">
           <a href="http://ebookcase-core-mvc.gear.host/" target="_blank">eBookcase / MVC</a>
@@ -90,7 +98,8 @@
         <figure>
           <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
           <figcaption>
-            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red one is trying
+            I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
+            one is trying
             to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
           <video width="500" src="movie_1min.mp4" controls></video>
@@ -106,13 +115,6 @@
         <figure>
           <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (JavaScript)</a>
           <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
-        </figure>
-
-        <figure>
-          <a href="https://hydro17.github.io/css-only-clock/" target="_blank">CSS only clock</a>
-          <figcaption>
-            A clock created using only HTML and CSS
-          </figcaption>
         </figure>
 
       </div>
