add Pizza service - web application

--- a/index.html
+++ b/index.html
@@ -73,9 +73,54 @@
       <div class="my-works">
 
         <figure>
+          <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service</a>
+          <figcaption>
+            (Java / Spring / Hibernate / MySQL/PostgreSQL Server / Bootstrap 4 (some elements) /<br>Authentication and
+            role-based athorization)
+            <br>The first start requires a 15-second wait.
+            <br><strong>Application allows to: </strong>&bull;&nbsp;Registering and logging in users.
+
+            <br><strong>As a customer:</strong> &bull;&nbsp;ordering pizza &bull;&nbsp;editing and removing
+            order (if status of order is still 'ordered').
+
+            <br><strong>As an employee, cook or admin: </strong>&bull;&nbsp;adding/editing/removing ingredients
+            &bull;&nbsp;adding/editing/removing pizzas &bull;&nbsp;adding/editing/removing orders &bull;&nbsp;change
+            order status.
+
+            <br><strong>As an admin: </strong>&bull;&nbsp;adding/editing/removing users.
+
+            <!-- <ul>
+              <li>Registering and logging in users</li>
+
+              <li>As a customer:
+                <ul>
+                  <li>order pizza,</li>
+                  <li>edit and remove order (if status of order is still 'ordered').</li>
+                </ul>
+              </li>
+
+              <li>As an employee, cook or admin:
+                <ul>
+                  <li>add/edit/remove ingredients,</li>
+                  <li>add/edit/remove pizzas,</li>
+                  <li>add/edit/remove orders,</li>
+                  <li>change order status.</li>
+                </ul>
+              </li>
+
+              <li>As an admin:
+                <ul>
+                  <li>add/edit/remove users.</li>
+                </ul>
+              </li>
+            </ul> -->
+          </figcaption>
+        </figure>
+
+        <figure>
           <a href="http://www.cza.pl/" target="_blank">Website of the magazine "Czasopismo Aptekarskie" (SPA)</a>
           <figcaption>
-            Responsive / mobile first website developed with Angular
+            Responsive / mobile first website developed with Angular.
           </figcaption>
         </figure>
 
@@ -108,13 +153,15 @@
         <figure>
           <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (Angular / Firebase)</a>
           <figcaption>
-            Created with Angular and using Firebase as a realtime database
+            Created with Angular and using Firebase as a realtime database.
           </figcaption>
         </figure>
 
         <figure>
           <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (JavaScript)</a>
-          <figcaption>Created in vanilla JavaScript / TypeScript (I prefer static typing)</figcaption>
+          <figcaption>
+            Created in vanilla JavaScript / TypeScript (I prefer static typing).
+          </figcaption>
         </figure>
 
       </div>
