--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 
 <body>
   <nav>
-    <ul class="container">
+    <ul class="container menu">
       <li id="menu-btn-home" class="menu-btn-regular menu-btn-selected">Home</li>
       <li id="menu-btn-works" class="menu-btn-regular">Works</li>
       <li id="menu-btn-contact" class="menu-btn-regular">Contact</li>
     </ul>
   </nav>
 
-  <main class="container nav-style">
+  <main class="container nav-style main-margin-top">
 
     <!-- home start ------------------------------>
     <div id="home" class="home">
@@ -176,7 +176,7 @@
 
   </main>
 
-  <footer class="container">
+  <footer class="container footer-margin-top">
     &copy; Andrzej Pepłowski 2018
   </footer>
 
