--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
           <figcaption>
             (Java / Spring / Hibernate / MySQL/PostgreSQL Server / Bootstrap 4 (some elements) /<br>Authentication and
             role-based athorization)
-            <br>The first start requires a 15-second wait.
-            <br><strong>Application allows to: </strong>&bull;&nbsp;Registering and logging in users.
+            <p>
+              <em>The first start of the application may take 30 seconds (Heroku requirement).</em>
+            </p>
+            <strong>Application allows to: </strong>&bull;&nbsp;Registering and logging in users.
 
             <br><strong>As a customer:</strong> &bull;&nbsp;ordering pizza &bull;&nbsp;editing and removing
             order (if status of order is still 'ordered').
@@ -127,7 +129,7 @@
           </figcaption>
         </figure>
 
-        <figure class="mt-4">
+        <figure>
           <a href="http://ebookcase-core-mvc.gear.host/" target="_blank">eBookcase / MVC</a>
           <figcaption>
             (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Bootstrap 4)
@@ -135,7 +137,7 @@
           </figcaption>
         </figure>
 
-        <figure class="mt-4">
+        <figure>
           <a href="http://ebookcase-core-rp.gear.host/BookList" target="_blank">eBookcase / Razor Pages</a>
           <figcaption>
             (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Bootstrap 4)
@@ -144,11 +146,10 @@
         </figure>
 
         <figure>
-          <div><span class="highlighted">Example of using C#</span> - The movie from the simulation in Unity 3D</div>
+          <div><span class="highlighted">Example of using C#</span> - A short video from a simulation in Unity 3D</div>
           <figcaption>
             I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
-            one is trying
-            to sink the blue one (both ships shoot to each other with cannons). <br><br>
+            one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
           <video width="500" src="movie_1min.mp4" controls></video>
         </figure>
