--- a/index.html
+++ b/index.html
@@ -78,47 +78,48 @@
         <figure>
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service</a>
           <figcaption>
-            (Java / Spring / Hibernate / MySQL/PostgreSQL Server / Bootstrap 4 (some elements) /<br>Authentication and
-            role-based athorization)
+            (Java / Spring / Hibernate / MySQL/PostgreSQL / Bootstrap&nbsp;4&nbsp;(some elements) /<br>Authentication
+            and
+            role-based authorization)
             <p>
-              <em>The first start of the application may take 30 seconds (Heroku requirement).</em>
+              <em>The first start of the application may take about 30 seconds (Heroku requirement).</em>
             </p>
-            <strong>Application allows to: </strong>&bull;&nbsp;Registering and logging in users.
 
-            <br><strong>As a customer:</strong> &bull;&nbsp;ordering pizza &bull;&nbsp;editing and removing
-            order (if status of order is still 'ordered').
+            <div class="app-features">
+              <h4 class="mb-2 mt-2">Application allows to: </h4>
 
-            <br><strong>As an employee, cook or admin: </strong>&bull;&nbsp;adding/editing/removing ingredients
-            &bull;&nbsp;adding/editing/removing pizzas &bull;&nbsp;adding/editing/removing orders &bull;&nbsp;change
-            order status.
+              <ul>
+                <li>As not logged in user:
+                  <ul>
+                    <li>to log in,</li>
+                    <li>to register as new user.</li>
+                  </ul>
+                </li>
 
-            <br><strong>As an admin: </strong>&bull;&nbsp;adding/editing/removing users.
+                <li>As a customer:
+                  <ul>
+                    <li>to order pizza,</li>
+                    <li>to edit/remove order (if order status is still 'ordered').</li>
+                  </ul>
+                </li>
 
-            <!-- <ul>
-              <li>Registering and logging in users</li>
+                <li>As an employee, cook or admin:
+                  <ul>
+                    <li>to add/edit/remove ingredients,</li>
+                    <li>to add/edit/remove pizzas,</li>
+                    <li>to add/edit/remove orders,</li>
+                    <li>to change order status.</li>
+                  </ul>
+                </li>
 
-              <li>As a customer:
-                <ul>
-                  <li>order pizza,</li>
-                  <li>edit and remove order (if status of order is still 'ordered').</li>
-                </ul>
-              </li>
+                <li>As an admin:
+                  <ul>
+                    <li>to add/edit/remove users.</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
 
-              <li>As an employee, cook or admin:
-                <ul>
-                  <li>add/edit/remove ingredients,</li>
-                  <li>add/edit/remove pizzas,</li>
-                  <li>add/edit/remove orders,</li>
-                  <li>change order status.</li>
-                </ul>
-              </li>
-
-              <li>As an admin:
-                <ul>
-                  <li>add/edit/remove users.</li>
-                </ul>
-              </li>
-            </ul> -->
           </figcaption>
         </figure>
 
@@ -133,7 +134,7 @@
           <a href="http://ebookcase-core-mvc.gear.host/" target="_blank">eBookcase / MVC</a>
           <figcaption>
             (C# / ASP.NET Core MVC / Entity Framework / SQL Server / Bootstrap 4)
-            <br>Simple application (created using MVC) performing CRUD operations.
+            <br>Simple application (developed using MVC) performing CRUD operations.
           </figcaption>
         </figure>
 
@@ -141,7 +142,7 @@
           <a href="http://ebookcase-core-rp.gear.host/BookList" target="_blank">eBookcase / Razor Pages</a>
           <figcaption>
             (C# / ASP.NET Core Razor Pages / Entity Framework / SQL Server / Bootstrap 4)
-            <br>Simple application (the same as above) (created using Razor Pages) performing CRUD operations.
+            <br>Simple application (the same as above) (developed using Razor Pages) performing CRUD operations.
           </figcaption>
         </figure>
 
@@ -151,20 +152,20 @@
             I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
             one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
-          <video width="500" src="movie_1min.mp4" controls></video>
+          <video class="simulation-video" src="movie_1min.mp4" controls></video>
         </figure>
 
         <figure>
           <a href="https://chat-f9704.firebaseapp.com/" target="_blank">Simple chat (Angular / Firebase)</a>
           <figcaption>
-            Created with Angular and using Firebase as a realtime database.
+            Developed using Angular and Firebase as a realtime database.
           </figcaption>
         </figure>
 
         <figure>
           <a href="https://hydro17.github.io/fast-typing/" target="_blank">Fast Typing (JavaScript)</a>
           <figcaption>
-            Created in vanilla JavaScript / TypeScript (I prefer static typing).
+            Developed in vanilla JavaScript / TypeScript (I prefer static typing).
           </figcaption>
         </figure>
 
