--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             I have created scripts (in C#) responsible for the ships behavior. The blue ship moves randomly and the red
             one is trying to sink the blue one (both ships shoot to each other with cannons). <br><br>
           </figcaption>
-          <video class="simulation-video" src="movie_1min.mp4" controls></video>
+          <video class="video-from-simulation" src="movie_1min.mp4" controls></video>
         </figure>
 
         <figure>
