add 'warning -30s' class (delay in app start on Heroku)

--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service</a>
           <figcaption>
             (Java / Spring / Hibernate / MySQL/PostgreSQL / Bootstrap&nbsp;4&nbsp;(some elements) /<br>Authentication
-            and
-            role-based authorization)
-            <p>
-              <em>The first start of the application may take about 30 seconds (Heroku requirement).</em>
-            </p>
+            and role-based authorization)
+
+            <br>
+            <div class="warning-30s mt-2">
+              <em>The first start of the application may take about 30 seconds (Heroku free account requirement).</em>
+            </div>
 
             <div class="app-features">
               <h4 class="mb-2 mt-2">Application allows to: </h4>
