add 'Thymeleaf' to 'Pizza service' description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <figure>
           <a href="https://pacific-scrubland-22758.herokuapp.com" target="_blank">Pizza service</a>
           <figcaption>
-            (Java / Spring / Hibernate / MySQL/PostgreSQL / Bootstrap&nbsp;4&nbsp;(some elements) /<br>Authentication
+            (Java / Spring / Hibernate / MySQL/PostgreSQL / Thymeleaf /Bootstrap&nbsp;4&nbsp;(some elements)
+            /<br>Authentication
             and role-based authorization)
 
             <br>
